--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-database'
 
+    // Retrofit
+    // Retrofit 라이브러리
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    // Gson 변환기 라이브러리
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // Scalars 변환기 라이브러리
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
 }
