--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <!-- PERMISSION FOR RESTFUL -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,6 +22,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Example"
         tools:ignore="AllowBackup">
+        <activity
+            android:name=".restful.RestfulActivity"
+            android:exported="false" />
         <activity
             android:name=".firebase.FirebaseActivity"
             android:exported="false" />
